[package]
name = "nrf24-rs"
version = "0.1.1"
authors = ["Tomas Van Roose <tomas.vanroose@gmail.com>"]
repository = "https://github.com/TomasVanRoose/RF24-rs"
license = "MIT OR Apache-2.0"

description = "Platform agnostic Rust driver for the nRF24L01 2.4 GHz transciever for wireless communication between embedded devices."
keywords = ["driver", "nRF24L01", "wireless", "embedded-hal", "embedded-hal-driver"]
categories = ["embedded", "hardware-support", "no-std"]

homepage = "https://github.com/TomasVanRoose/RF24-rs"
readme = "README.md"
edition = "2018"
rust = "1.50.0"

exclude = [
    "examples/",
]

[features]
micro-fmt = ["ufmt"]

[dependencies]
embedded-hal = "0.2"
# Feature dependencies
ufmt = { version = "0.1", optional = true }
