[package]
name = "nrf24-rs"
version = "0.2.0"
authors = ["Tomas Van Roose <tomas.vanroose@gmail.com>"]
repository = "https://github.com/TomasVanRoose/RF24-rs"
license = "MIT OR Apache-2.0"

description = "Platform agnostic Rust driver for the nRF24L01 2.4 GHz transciever for wireless communication between embedded devices."
keywords = ["driver", "nRF24L01", "wireless", "embedded-hal", "embedded-hal-driver"]
categories = ["embedded", "hardware-support", "no-std"]

homepage = "https://github.com/TomasVanRoose/RF24-rs"
readme = "README.md"
edition = "2021"
rust = "1.81.0"

exclude = [
    "examples/",
]

[dependencies]
embedded-hal = "1.0.0"
